docs: update package.json

--- a/desafio-front-end/package.json
+++ b/desafio-front-end/package.json
@@ -1,7 +1,10 @@
 {
   "name": "desafio-front-end",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
+  "author": {
+    "name": "Raissa E. Cardoso"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
